@@ -1,1 +1,1 @@
-1.8.23.0-rc2
+1.8.23.0
